<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Three"
    tools:layout_editor_absoluteY="81dp">

    <ToggleButton
        android:id="@+id/showHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="showHint"
        android:text="@android:string/ok"
        android:textOff="@string/show_hint"
        android:textOn="@string/hide_hint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hint_three"
        app:layout_constraintStart_toEndOf="@+id/showHint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/not_yet"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/level_three"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/back"
        android:contentDescription="@android:string/ok"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/next"
        android:contentDescription="@android:string/ok"
        android:onClick="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/scrambled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/scrambled"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHint" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Enter password here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrambled" />

</android.support.constraint.ConstraintLayout>