<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Two">

    <ToggleButton
        android:id="@+id/showHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="showHint"
        android:text="@android:string/ok"
        android:textOff="@string/show_hint"
        android:textOn="@string/hide_hint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/not_yet"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hint_two"
        app:layout_constraintStart_toEndOf="@+id/showHint"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/up"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/down"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/left" />

    <ToggleButton
        android:id="@+id/right"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/left"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/level_two"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/back"
        android:contentDescription="@android:string/ok"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/next"
        android:contentDescription="@android:string/ok"
        android:onClick="go3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/times"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>