<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".One">

    <ToggleButton
        android:id="@+id/b1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintEnd_toStartOf="@+id/down" />

    <ToggleButton
        android:id="@+id/down"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/b3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/down" />

    <ToggleButton
        android:id="@+id/b4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b5"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/b5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/b6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/b7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <ToggleButton
        android:id="@+id/b8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <ToggleButton
        android:id="@+id/b9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@android:string/ok"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <TextView
        android:id="@+id/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/level_one"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/back"
        android:contentDescription="@android:string/ok"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/next"
        android:contentDescription="@android:string/ok"
        android:onClick="go2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/showHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="showHint"
        android:text="@android:string/ok"
        android:textOff="@string/show_hint"
        android:textOn="@string/hide_hint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hint_one"
        app:layout_constraintStart_toEndOf="@+id/showHint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/not_yet"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>